# jjazy

./: .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  go.mod  go.sum  main.go
.claude/plans/: file-operations-fix.md
.claude/plans/ffi-logging/: dev-notes.md  plan.md
.claude/plans/ffi-logging/tasks/: task-1.md  task-2.md  task-3.md  task-4.md  task-5.md
.claude/plans/interactive-mode/: plan.md
app/: navigation.go
interactive/: actions.go  actions_test.go  interactive.go
jj/: cli.go  cli_test.go  jj.go  repo.go  repo_test.go
jj/internal/ffi/: bridge.h  ffi.go  logger.go  logger_test.go
rust/: Cargo.toml
rust/src/: lib.rs
ui/: app.go  helpbar.go  helpbar_test.go  keys.go  styles.go
ui/borders/: borders.go
ui/fixtures/: data.go
ui/floating/: confirm.go  help.go  info.go  log.go  textinput.go
ui/graph/: graph.go
ui/messages/: messages.go
ui/panels/: bookmarks.go  diff.go  files.go  log.go  operations.go  panel.go  status.go  workspace.go
ui/prefix/: prefix.go
ui/theme/: theme.go
