[package]
name = "jjbridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jj-lib = "0.36"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pollster = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["io-util"] }
chrono = "0.4"
